# Hybrid-Feature-Selection-using-Correlation-Clustering-and-PSO

./: LICENSE  README.md  package_hfscp.py  pyproject.toml
other files/: hfs_c_p1 (2).ipynb
other files/Arrhythmia/: arrhythmia_sklearn_accuracy_rfe.csv  arrhythmia_sklearn_accuracy_sfm.csv  arrhythmia_sklearn_accuracy_univariate.csv  cleaned_arythmia.csv  hfs.py  multiprocessing_hfs.py  new_hfs.py
other files/RNA/: rna_clean.py  rna_sklearn_accuracy_sfm.csv  rna_sklearn_accuracy_univariate.csv
src/HFS_CC_PSO/: __init__.py  hfs_cc_pso.py
src/HFS_CC_PSO.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
